sass/_design.scss
#casement {
  @extend %stretch;

  .single-column & {
    top: 1.5em;
  }
}

#source {
  @extend %stretch;
}

body:after {
  content: 'desktop';
  display: none;
  speak: none;

  @media #{$tablet} {
    content: 'tablet';
  }

  @media #{$mobile} {
    content: 'mobile';
  }
}

.swag-promo {
  clear: both;
  text-align: left;
  color: $delta_color;

  p {
    font-size: em($heading_5);
    font-weight: 200;
    margin-bottom: 0.5em;
  }

  h1 {
    font-size: em($heading_1 * 1);
  }

  .messenger-message {
    float: left;
  }

  .message .messenger-message-inner{
    text-align: left;
  }

  img {
    float: right;
    width: 40%;
    max-width: 120px;
    padding-left: 0.5em;
    display: inline-block;

    @each $prefix in $prefix_defaults {
      #{$prefix}border-radius: em(3);
    }

    .messenger & {
      @media #{$mobile} {
        display: block;
        float: none;
        width: 100%;
        margin-left: 0;
        margin-bottom: 0.5em;
      }
    }
  }
}

#rendered .editor-header {
  display: none;
}

.single-column {
  .main_body .editor {
    margin: 0;
  }

  .editor-header {
    @extend %editor-header;
    z-index: 9999;
    cursor: pointer;
    background: $india_gray;

    h2 {
      display: inline-block;
      padding: 0 1em;

      @media #{$mobile} {
        padding: 0 0.66667em;
      }
    }

    & .current {
      background: $bravo_gray;
      color: $white;
    }
  }
  .panel .editor-header {
    display: none;
  }

  .hide-panel {
      display: none !important;
      z-index: -999;
  }

  .show-panel {
      display: block !important;
      z-index: 999;
  }
}

.embedded .editor-header {
  background: $alpha_color_fox;

  & .current {
    background: transparentize($bravo_gray, 0.25);
  }
}


.hide {
  display: none !important;
}

#sass-compiling {
  position: relative;
  margin-left: 0.25em;
}

#compile-time {
  opacity: 1;

  &.fade {
    opacity: 0;

    -webkit-transition: opacity 0.5s ease-in-out;
    -moz-transition: opacity 0.5s ease-in-out;
    transition: opacity 0.5s ease-in-out;

    -webkit-transition-delay: 10s !important;
    -moz-transition-delay: 10s !important;
    transition-delay: 10s !important;
  }
}

